# IR_Naloga_2_deljenje_skrivnosti

./: CMakeLists.txt  file_utils.cpp  file_utils.h  lcg.cpp  lcg.h  main.cpp
